# rustypy

./: README.md  entropy.py  rustypy.py
pyrustmodule/: Cargo.toml
pyrustmodule/src/: lib.rs
