[package]
name = "pyrustmodule"
version = "0.1.0"
authors = ["Nachiketh <technology3.0cradle@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] 
name = "rust_entropy_lib" 
crate-type = ["dylib"] 

[dependencies.cpython] 
version = "0.4.1"
features = ["extension-module"]
